fixed contrast ind some screens

--- a/sdi-entrega1-1203/src/main/resources/static/css/custom.css
+++ b/sdi-entrega1-1203/src/main/resources/static/css/custom.css
@@ -1,4 +1,11 @@
 /* Sticky footer styles-------------------------------------------------- */
+
+*{
+
+color:#5f5f5f;
+  text-shadow: 0.01em 0.01em #afafaf;
+}
+
 html {
 	position: relative;
 	min-height: 100%;
@@ -14,7 +21,9 @@ body {
 .error{
 	color:red;
 }
-
+i{
+	color:blueviolet ;
+}
 
 footer {
 	margin-top: 60px;
